--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
   </head>
   <body id="page-top">
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-expanded">
           <div class="container-fluid">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
@@ -36,13 +36,13 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                       <li>
-                          <a class="page-scroll" href="#services">Services</a>
+                          <a class="page-scroll" href="#services">Servicios</a>
                       </li>
                       <li>
-                          <a class="page-scroll" href="#about">About</a>
+                          <a class="page-scroll" href="#about">Nuestro Espacio</a>
                       </li>
                       <li>
-                          <a class="page-scroll" href="#contact">Contact</a>
+                          <a class="page-scroll" href="#contact">Contacto</a>
                       </li>
                   </ul>
               </div>
@@ -131,11 +131,15 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@barbuda.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">info@barbudastudio.com</a></p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Core Script -->
+    <script src="js/classie.js"></script>
+    <script src="js/cbpAnimatedHeader.js"></script>
   <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
