--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>El Lazo</title>
@@ -40,6 +41,9 @@
                       </li>
                       <li>
                           <a class="page-scroll" href="#about">Nuestro Espacio</a>
+                      </li>
+                      <li>
+                          <a class="page-scroll" href="#donde_estamos">Donde Estamos</a>
                       </li>
                       <li>
                           <a class="page-scroll" href="#contact">Contacto</a>
@@ -115,6 +119,9 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="donde_estamos">
     </section>
 
     <section id="contact">
