--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <!-- Font-awesome -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <!-- Css Min -->
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
 
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
   </head>
   <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -40,13 +41,19 @@
                           <a class="page-scroll" href="#services">Servicios</a>
                       </li>
                       <li>
-                          <a class="page-scroll" href="#about">Nuestro Espacio</a>
+                          <a class="page-scroll" href="#slider">Nuestro Espacio</a>
                       </li>
                       <li>
                           <a class="page-scroll" href="#donde_estamos">Donde Estamos</a>
                       </li>
                       <li>
                           <a class="page-scroll" href="#contact">Contacto</a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/el.lazo"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                        <a href="https://www.instagram.com/el.lazo/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                       </li>
                   </ul>
               </div>
@@ -69,7 +76,7 @@
   <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-md-12 text-center">
                     <h2 class="section-heading">Servicios</h2>
                     <hr class="primary">
                 </div>
@@ -108,19 +115,37 @@
             </div>
         </div>
     </section>
-
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Conoce nuestro espacio!</h2>
-                    <hr class="light">
-                    <iframe src="https://www.youtube.com/embed/ZOuMQf8BAyA" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
+  <section class="bg-primary" id="slider">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2 class="section-heading">Conoce Nuestro Espacio!</h2>
+          <hr class="primary">
         </div>
-    </section>
-
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <img src="img/Flecha_der.png" class="next">
+          <div class="carrousel">
+            <div><img class="img-responsive" src="img/IMG_8172.jpg" alt=""></div>
+            <div><img class="img-responsive" src="img/IMG_8182.jpg" alt=""></div>
+            <div><img class="img-responsive" src="img/IMG_8191.jpg" alt=""></div>
+            <div><img class="img-responsive vertical" src="img/IMG_8197.jpg" alt=""></div>
+            <div><img class="img-responsive" src="img/IMG_8220.jpg" alt=""></div>
+            <div><img class="img-responsive vertical" src="img/Biblioteca.jpg" alt=""></div>
+            <div><img class="img-responsive vertical" src="img/5.jpg" alt=""></div>
+            <div><img class="img-responsive vertical" src="img/9.jpg" alt=""></div>
+          </div>
+          <img src="img/Flecha_izq.png" class="prev">
+        </div>
+      </div>
+    </div>
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+              <iframe src="https://www.youtube.com/embed/ZOuMQf8BAyA" frameborder="0" allowfullscreen></iframe>
+          </div>
+      </div>
+  </section>
     <section id="donde_estamos">
     </section>
 
@@ -134,23 +159,61 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center sr-contact">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>1128604403</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">info@barbudastudio.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">campusellazo@gmail.coom</a></p>
                 </div>
             </div>
+            <footer class="col-md-12 text-right desk">
+              <p>&copy; All rights reserved. El Lazo 2017 <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://barbudastudio.com" target="_blank"> Barbuda Studio</a></p>
+            </footer>
         </div>
     </section>
 
   <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="js/slick.min.js"> </script>
 
     <script src="js/index.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+      $('.carrousel').slick({
+        centerMode: true,
+        centerPadding: '60px',
+        slidesToShow: 3,
+        autoplay: true,
+        speed:300,
+        prevArrow: $('.prev'),
+        nextArrow: $('.next'),
+        responsive: [
+          {
+            breakpoint: 768,
+            settings: {
+              arrows: false,
+              centerMode: true,
+              centerPadding: '40px',
+              slidesToShow: 3
+            }
+          },
+          {
+            breakpoint: 480,
+            settings: {
+              arrows: false,
+              centerMode: true,
+              centerPadding: '40px',
+              slidesToShow: 1
+            }
+          }
+        ]
+      });
+    });
+    </script>
   </body>
 </html>
