--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                           <a class="page-scroll" href="#contact">Contacto</a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/el.lazo"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/Campusellazo/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                       </li>
                       <li>
                         <a href="https://www.instagram.com/el.lazo/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -141,7 +141,7 @@
       </div>
     </div>
       <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 text-center">
+          <div class="col-md-8 col-md-offset-2 text-center">
               <iframe src="https://www.youtube.com/embed/ZOuMQf8BAyA" frameborder="0" allowfullscreen></iframe>
           </div>
       </div>
@@ -152,18 +152,22 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-md-8 col-md-offset-2 text-center">
                     <h2 class="section-heading">Contactanos!</h2>
                     <hr class="primary">
                     <p>Estás listo para arrancar tu proximo proyecto? Genial! Contactanos y arranca a trabajar en el mejor espacio de co-working para vos y tu equipo!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center sr-contact">
+                <div class="col-md-4 text-center sr-contact">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>1128604403</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-md-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:your-email@your-domain.com">campusellazo@gmail.coom</a></p>
+                </div>
+                <div class="col-md-4 text-center sr-contact">
+                    <i class="fa fa-map-marker fa-3x sr-contact"></i>
+                    <p>tucuman 2153 </p>
                 </div>
             </div>
             <footer class="col-md-12 text-right desk">
